0.1-alpha2/_sources/gene/AGAP006031.rst.txt
:orphan:



AGAP006031
==========

Location: **2L:25,462,491-25,466,768**



Description: **Nuclear pore complex protein nup54**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP006031>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2L:25462491-25466768#genomebrowser>`_

Overlapping signals
-------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/BFM/2/2/index`, "2L:25,400,001-25,520,000", 919 (426 | 492)
    :doc:`../signal/H12/GAS/2/1/index`, "2L:25,460,001-25,520,000", 496 (193 | 303)
    



Adjacent signals
----------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/BFS/2/5/index`, "2L:25,380,001-25,420,000", 409 (195 | 214)
    :doc:`../signal/H12/AOM/2/3/index`, "2L:25,380,001-25,460,000", 392 (242 | 150)
    



Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP006031';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


