0.1-alpha3/_sources/gene/AGAP006031.rst.txt
:orphan:



AGAP006031
==========

Location: **2L:25,462,491-25,466,768**



Description: **Nuclear pore complex protein nup54**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP006031>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2L:25462491-25466768#genomebrowser>`_




This gene occurs within 50 kbp of the :doc:`../known-locus/rdl`,
a genome region with prior evidence of an association with insecticide resistance and/or recent positive
selection in *Anopheles* mosquitoes.


Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/BFM/2/2/index`
      - H12
      - Burkina Faso *An. coluzzii*
      - 2L:25,434,895-25,494,895
      - 1,172
      - 98.4%
      - Rdl
    * - :doc:`../signal/H12/GAS/2/1/index`
      - H12
      - Gabon *An. gambiae*
      - 2L:25,454,895-25,514,895
      - 529
      - 100.0%
      - Rdl
    * - :doc:`../signal/XPEHH/BFM.BFS/2/1/index`
      - XPEHH
      - Burkina Faso *An. coluzzii*
      - 2L:25,454,895-25,554,895
      - 468
      - 99.3%
      - Rdl
    * - :doc:`../signal/XPEHH/BFS.UGS/2/4/index`
      - XPEHH
      - Burkina Faso *An. gambiae*
      - 2L:25,434,895-25,474,895
      - 388
      - 98.3%
      - Rdl
    * - :doc:`../signal/H12/BFS/2/5/index`
      - H12
      - Burkina Faso *An. gambiae*
      - 2L:25,454,895-25,534,895
      - 375
      - 96.1%
      - Rdl
    * - :doc:`../signal/IHS/BFS/2/5/index`
      - IHS
      - Burkina Faso *An. gambiae*
      - 2L:25,434,895-25,614,895
      - 256
      - 99.8%
      - Rdl
    * - :doc:`../signal/XPEHH/BFS.GWA/2/6/index`
      - XPEHH
      - Burkina Faso *An. gambiae*
      - 2L:25,434,895-25,474,895
      - 138
      - 95.3%
      - Rdl
    




Adjacent selection signals
--------------------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/XPEHH/BFM.GWA/2/2/index`
      - XPEHH
      - Burkina Faso *An. coluzzii*
      - 2L:25,474,895-25,514,895
      - 625
      - 99.4%
      - Rdl
    * - :doc:`../signal/XPEHH/GAS.GWA/2/1/index`
      - XPEHH
      - Gabon *An. gambiae*
      - 2L:25,474,895-25,634,895
      - 423
      - 100.0%
      - Rdl
    * - :doc:`../signal/IHS/BFM/2/3/index`
      - IHS
      - Burkina Faso *An. coluzzii*
      - 2L:24,754,895-25,434,895
      - 304
      - 99.9%
      - Rdl
    * - :doc:`../signal/XPEHH/CMS.UGS/2/2/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2L:25,414,895-25,454,895
      - 291
      - 90.3%
      - Rdl
    * - :doc:`../signal/XPEHH/AOM.GWA/2/6/index`
      - XPEHH
      - Angola *An. coluzzii*
      - 2L:25,254,895-25,414,895
      - 92
      - 83.9%
      - Rdl
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP006031';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


